@@ -1,5 +1,11 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2009-02-05  Peter Bergner  <bergner@vnet.ibm.com>
+	* gas/ppc/booke.s ("dcbt", "dcbtst"): New tests.
+	* gas/ppc/booke.d: Likewise.
+	* gas/ppc/power4_32.s: Likewise.
+	* gas/ppc/power4_32.d: Likewise.
+
 	2009-01-14  Peter Bergner  <bergner@vnet.ibm.com>
 	* gas/ppc/power6.s ("mtfsf", "mtfsf.", "mtfsfi", "mtfsfi."): Add tests.
 	* gas/ppc/power6.d: Likewise.
